# Frankenstein

./: .gitattributes  .gitignore  CREDITS  Doxyfile  Frankenstein.files  Frankenstein.includes  Guidedelutilisateur.docx  Guideduprogrammeur.docx  Manuel_Programmeur.docx  Manuel_Utilisation.docx  README.md  Rules.mk  circle.ld  makeall  makedoc  meson.build
addon/: README
addon/OneWire/: Makefile  OneWire.cpp  OneWire.h
addon/Properties/: Makefile  properties.cpp  properties.h  propertiesfile.cpp  propertiesfile.h
addon/SDCard/: Makefile  emmc.cpp  emmc.h
addon/Spectrum/: Makefile  SpectrumScreen.cpp  SpectrumScreen.h
addon/WS28XX/: Makefile  ws28xxstripe.cpp  ws28xxstripe.h
addon/dio/: Makefile  spidio.cpp  spidio.h
addon/rtc/: Makefile  mcp7941x.cpp  mcp7941x.h  rtc.h
addon/tftpfileserver/: Makefile  tftpfileserver.cpp  tftpfileserver.h
addon/ugui/: Makefile  ugui.c  ugui.h  ugui_config.h  uguicpp.cpp  uguicpp.h
addon/webconsole/: Makefile  logbuffer.cpp  logbuffer.h  webconsole.cpp  webconsole.h
app/: .swp  Rules.mk
app/kernel/: Makefile  kernel.cpp  kernel.h  kernel7.elf  kernel7.img  kernel7.lst  kernel7.map  main.cpp
app/template/: kernel.cpp  kernel.h
application/: meson.build  sfmlEmulator.cpp  termEmulator.cpp
boot/: .gitignore  Makefile
doc/: classes.txt  cmdline.txt  debug.txt  keyboard.txt  memorymap.txt  multicore.txt  realtime.txt  screen.txt
emulator/: Makefile  cpu.cpp  file_rom.cpp  gamepad.cpp  mapper.cpp  mapper_factory.cpp  memory.cpp  memory_nes.cpp  meson.build  nes.cpp  ppu.cpp  rom.cpp  rom_data.cpp  rom_file.cpp  rom_loader.cpp  rom_static.cpp  rom_static_data.cpp
emulator/include/: bus.h  cpu.h  dependencies.h  file_rom.h  gamepad.h  mapper.h  mapper_factory.h  memory.h  memory_nes.h  nes.h  ppu.h  rom.h  rom_file.h  rom_loader.h  rom_static.h  util.h
emulator/test/: Makefile  common.h  cpu_test.cpp  cputest  cputest.cpp  memory_test.cpp  meson.build  rom_test.cpp  sfmlEmulator.cpp  termEmulator.cpp
emulator/test/roms/: rom
include/: assert.h  stdint.h
include/circle/: actled.h  alloc.h  armv6mmu.h  bcm2835int.h  bcm2836.h  bcmframebuffer.h  bcmmailbox.h  bcmpropertytags.h  bcmrandom.h  chargenerator.h  cputhrottle.h  debug.h  device.h  devicenameservice.h  dmachannel.h  exception.h  exceptionhandler.h  exceptionstub.h  gpioclock.h  gpiomanager.h  gpiopin.h  i2cmaster.h  i2cslave.h  interrupt.h  koptions.h  logger.h  machineinfo.h  macros.h  memio.h  memory.h  multicore.h  nulldevice.h  pagetable.h  ptrarray.h  ptrlist.h  pwmoutput.h  pwmsounddevice.h  screen.h  serial.h  spimaster.h  (+14 more)
kernel/: config.txt  kernel.cpp  kernel.h  main.cpp  meson.build
lib/: Makefile  actled.cpp  alloc.cpp  assert.cpp  bcmframebuffer.cpp  bcmmailbox.cpp  bcmpropertytags.cpp  bcmrandom.cpp  cache-v7.S  chargenerator.cpp  cputhrottle.cpp  debug.cpp  delayloop.S  device.cpp  devicenameservice.cpp  dmachannel.cpp  exceptionhandler.cpp  exceptionstub.S  font.h  gpioclock.cpp  gpiomanager.cpp  gpiopin.cpp  i2cmaster.cpp  i2cslave.cpp  interrupt.cpp  koptions.cpp  libhelper.cpp  libstub.S  logger.cpp  machineinfo.cpp  memory.cpp  multicore.cpp  new.cpp  nulldevice.cpp  pagetable.cpp  ptrarray.cpp  ptrlist.cpp  purecall.cpp  pwmoutput.cpp  pwmsounddevice.cpp  (+15 more)
lib/bt/: .gitignore  LICENCE.broadcom_bcm43xx  Makefile  btdevicemanager.cpp  bthcilayer.cpp  btinquiryresults.cpp  btlogicallayer.cpp  btqueue.cpp  btsubsystem.cpp  bttask.cpp  btuarttransport.cpp
lib/fs/: Makefile  partition.cpp  partitionmanager.cpp
lib/input/: Makefile  keyboardbehaviour.cpp  keymap.cpp  keymap_de.h  keymap_es.h  keymap_fr.h  keymap_it.h  keymap_uk.h  keymap_us.h  mousebehaviour.cpp  touchscreen.cpp
lib/net/: Makefile  arphandler.cpp  checksumcalculator.cpp  dhcpclient.cpp  dnsclient.cpp  httpdaemon.cpp  icmphandler.cpp  ipaddress.cpp  linklayer.cpp  netconfig.cpp  netconnection.cpp  netdevlayer.cpp  netqueue.cpp  netsubsystem.cpp  nettask.cpp  networklayer.cpp  ntpclient.cpp  ntpdaemon.cpp  retransmissionqueue.cpp  retranstimeoutcalc.cpp  routecache.cpp  socket.cpp  tcpconnection.cpp  tcprejector.cpp  tftpdaemon.cpp  transportlayer.cpp  udpconnection.cpp
lib/sched/: Makefile  scheduler.cpp  synchronizationevent.cpp  task.cpp  taskswitch.S
lib/usb/: Makefile  README  dwhcidevice.cpp  dwhciframeschednper.cpp  dwhciframeschednsplit.cpp  dwhciframeschedper.cpp  dwhciregister.cpp  dwhcirootport.cpp  dwhcixferstagedata.cpp  macaddress.cpp  netdevice.cpp  smsc951x.cpp  usbbluetooth.cpp  usbconfigparser.cpp  usbdevice.cpp  usbdevicefactory.cpp  usbendpoint.cpp  usbfunction.cpp  usbgamepad.cpp  usbhiddevice.cpp  usbhostcontroller.cpp  usbkeyboard.cpp  usbmassdevice.cpp  usbmouse.cpp  usbprinter.cpp  usbrequest.cpp  usbstandardhub.cpp
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: Default.properties  Pi_Configuration.properties  configurations.xml  private.xml
sample/: README  Rules.mk  makeall
sample/01-gpiosimple/: kernel.cpp
sample/02-screenpixel/: README  kernel.cpp  kernel.h
sample/03-screentext/: README  kernel.cpp  kernel.h
sample/04-timer/: README  kernel.cpp  kernel.h
sample/05-usbsimple/: README  kernel.cpp
sample/06-usbethernet/: README  kernel.cpp
sample/07-usbstorage/: README  kernel.cpp  kernel.h
sample/08-usbkeyboard/: README  kernel.cpp  kernel.h
sample/09-softserial/: Makefile  README  kernel.cpp  kernel.h  softserial.cpp  softserial.h
sample/10-usbmouse/: README  kernel.cpp  kernel.h
sample/11-gpioclock/: Makefile  README  (+2 more)
subprojects/circle/: CMakeList.txt  Rules.mk  meson.build  rpi3-cross.txt
subprojects/circle/app/: makeall
subprojects/circle/app/kernel/: Makefile
subprojects/circle/app/lib/emulator/: cpu.h  nes.cpp  ppu.cpp  ppu.h  rom.h  util.h
subprojects/circle/boot/: meson.build
subprojects/circle/doc/: cmdline.txt
subprojects/circle/include/circle/: device.h  screen.h
subprojects/circle/lib/: memory.cpp  meson.build  new.cpp
subprojects/circle/lib/sched/: meson.build
subprojects/circle/lib/usb/: meson.build  usbdevicefactory.cpp  usbhiddevice.cpp
(+263 files in other folders)
