usb_src = ['dwhcidevice.cpp', 'dwhciregister.cpp', 'dwhcixferstagedata.cpp',
           'usbconfigparser.cpp', 'usbdevice.cpp', 'usbendpoint.cpp',
           'usbhostcontroller.cpp', 'usbrequest.cpp', 'smsc951x.cpp',
           'macaddress.cpp', 'netdevice.cpp', 'usbdevicefactory.cpp',
           'usbstandardhub.cpp', 'dwhciframeschednper.cpp', 'dwhciframeschedper.cpp',
           'dwhcirootport.cpp', 'usbgamepad.cpp', 'usbfunction.cpp',
           'dwhciframeschednsplit.cpp', 'usbhiddevice.cpp']

libusb = static_library('circle_usb', usb_src, include_directories: circle_include, pic: false)